# pkp_alumni_data

./: README.md  alumni_dat_parser.py
datparser/: alumni_dat_parser.py  alumni_dat_parser.pyproj  alumni_dat_parser.sln  datparser.code-workspace  fd_23_contacts.py  mailchimp_api.py  new_dumper.csv  new_dumper_penn.csv  new_parser.py  poetry.toml  pyproject.toml  query.py  query_pre_1960.py
datparser/contact_data/: contact_prefs_and_bad.csv
datparser/mailchimp_update/members_export_56f18ab2c0/: cleaned_members_export_56f18ab2c0.csv  subscribed_members_export_56f18ab2c0.csv  unsubscribed_members_export_56f18ab2c0.csv
datparser/misc_data/: pre_1960_email_bounce.txt
datparser/new_output/: addr_bad.txt  address_fix.xml  assimilated_foundation.xml  assimilated_foundation_bak.xml  fb_alumni_no_found.txt  notes.txt  random_notes.txt  repeats.txt  sorted_headers_out.csv
datparser/raw_inputs/mail_chimp_data/: members_Newsletter_Summer_2022_opened_Oct_9_2022.csv
datparser/raw_inputs/misc/: facebook_list_04_01_22.csv  pkp_reno_interest_form.csv
datparser/raw_inputs/pennington_feasibility/: misc_data.xlsx  penngington_feasibility_study.csv  pennington_call_status.csv  pennington_contact_list.csv  pennington_eras.csv  pennington_focus_group.csv
datparser/un_trimmed_data/from_gabos/: 2017 May 29 reg report.csv  2018 May 30.csv  2019 May 17.csv  Copy of report-2021-04-27T0956.xlsx  Registration_list_2015_report.csv
datparser/un_trimmed_data/from_zobel/: 2021_fd_list.xlsx  master_contact_list.xlsx  report-2021-05-12T0915.xlsx
raw_inputs/: facebook_list_04_01_22.csv  (+12 more)
(+28 files in other folders)
