[tool.poetry]
name = "datparser"
version = "0.1.0"
description = "Data Parser for PKP Alumni Data"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
